:busts_in_silhouette: Update contributors file to match other repos

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -23,7 +23,7 @@
     },
     {
       "login": "mohittaneja-7",
-      "name": "mohittaneja-7",
+      "name": "Mohit Taneja",
       "avatar_url": "https://avatars.githubusercontent.com/u/67370820?v=4",
       "profile": "https://github.com/mohittaneja-7",
       "contributions": [
