--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,10 +14,17 @@ plugins:
   # - search.suggest
   # - search.highlight
   # - search.share
+markdown_extensions:
+  - admonition
+  - pymdownx.superfences
 extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/DylanGore-FYP
 nav:
-  - Home:
-      - index.md
+  - Documentation:
+      - 'Home': index.md
+      - Setup:
+          - setup/vehicle.md
+          - setup/cloud.md
+  - About: about/index.md
