:sparkles: Add icon & emoji extension

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,9 @@ markdown_extensions:
   - admonition
   - pymdownx.superfences
   - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
 extra:
   social:
     - icon: fontawesome/brands/github
